Fixed Logo Overflowing

--- a/styles.css
+++ b/styles.css
@@ -186,10 +186,20 @@ a:active{
   height: 60%;
   width: auto;
 }
+
+#logo {
+  height: 30vh; margin-top: -50px; margin-bottom: -50px;
+}
 @media only screen and (max-width: 600px) {
   .main {
     max-width: 100%;
     margin: 0px 20px;
+  }
+
+  #logo {
+    height: auto;
+    max-width:100%;
+    width:100%;
   }
 
 *{
